[project]
name = "reimbursement-pal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.4.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "requests>=2.33.1",
    "rich>=15.0.0",
]
